misc pages, fixes

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
         <div class="col-sm-8 utils">
           <ul class="list-inline">
             <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Request a Catalog</a></li>
+            <li><a href="request-catalog.html">Request a Catalog</a></li>
             <li><a href="#">Portal Login</a></li><li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
             <!--<li><a href="#"><i class="search fa fa-search search-button"></i></a></li>-->
           </ul>
@@ -77,8 +77,8 @@
     
     <div class="fluid-container landing-nav margin-bottom-30">
       <div class="container">
-        <h1 class="page-heading">Call Us +1 (970) 259-2869 &nbsp;|&nbsp; US Toll Free (866) 795-1586</h1>
-        <h4 class="small">OUR SUPPORT TEAM IS HERE TO HELP. WE GLADLY RESPOND TO INQUIRIES AND PROVIDE ADVICE ON YOUR WATERBLAST CHALLENGES.</h4>
+        <h1 class="page-heading">Call Us +1 (970) 259-2869 &nbsp;|&nbsp; Toll Free (866) 795-1586</h1>
+        <h4 class="small">OUR SUPPORT TEAM IS HERE TO HELP. WE GLADLY RESPOND TO INQUIRIES AND PROVIDE ADVICE ON YOUR WATERBLAST CHALLENGES. <span class="grey">Monday through Friday 8:00am - 5:00pm MST</span></h4>
         </div>
       </div>
     </div>
@@ -108,7 +108,7 @@
                   +1 970 259 2869 <br>
                   <a href="mailto:sales@stoneagetools.com" class="">sales@stoneagetools.com</a>
                 </address>
-                <p class="small">Monday to Friday 8:00am&ndash;5:00pm</p>
+                <p class="small">Monday to Friday 8:00am&ndash;5:00pm MST</p>
                 <hr>
                 <h3>Houston Area Office</h3>
                 <address>
@@ -117,7 +117,7 @@
                   +1 970 259 2869 <br>
                   <a href="mailto:sales@stoneagetools.com" class="">sales@stoneagetools.com</a>
                 </address>
-                <p class="small">Monday to Friday 8:00am&ndash;5:00pm</p>
+                <p class="small">Monday to Friday 8:00am&ndash;5:00pm MST</p>
               </div>
               <div class="col-sm-4 contact-method">
                 <h2><i class="fa fa-paper-plane"></i><br/>Email Us</h2>
