--- a/sewer-tools-nozzles/manhole-cleaner.html
+++ b/sewer-tools-nozzles/manhole-cleaner.html
@@ -43,7 +43,7 @@
         <div class="col-sm-8 utils">
           <ul class="list-inline">
             <li><a href="../contact.html">Contact Us</a></li>
-            <li><a href="#">Request a Catalog</a></li>
+            <li><a href="request-catalog.html">Request a Catalog</a></li>
             <li><a href="#">Portal Login</a></li><li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
             <!--<li><a href="#"><i class="search fa fa-search search-button"></i></a></li>-->
           </ul>
@@ -107,7 +107,7 @@
         <h3>Turn your Warthog pipe cleaning tool into an effective Manhole Cleaner</h3>
         <p class="product-description">The benefit of using this design is that the jets are directed at the manhole walls at all times which makes it much more effective and safer than 3D tools.</p>
       <p>The conversion is simple and requires exchanging the standard WG 040 head with our Manhole Cleaner head kits. The head conversion kits include a head with 1/2” extension arms and nozzles.  We recommend the use of manhole cover plates for increased safety.</p>
-      <p><strong>Our expert staff is available Monday through Friday 8:AM - 5:PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
+      <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold margin-bottom-30">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
         
         <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
