--- a/technical-reference.html
+++ b/technical-reference.html
@@ -71,74 +71,53 @@
   
   <div class="fluid-container landing-nav">
     <div class="container">
-      <h1 class="page-heading">About StoneAge</h1>
+      <h1 class="page-heading">Technical Reference</h1>
     </div>
   </div>
 
-  <section class="container padding-tb-30 margin-bottom-30">
-    <div class="col-sm-7">
-      <h1 class="thin grey spaced margin-bottom-30"><em>StoneAge Inc. is one of the world’s leading manufacturers of automated waterblast equipment and tooling for industrial companies and contractors worldwide.</em></h1>
-      <p>The company was launched when co-founders John Wolgamott and Jerry Zink developed a new self-rotary nozzle from their garage, changing the way heat exchangers were cleaned in the early 1980s. Their passion for research and development bred a culture of product innovation at StoneAge where the commitment to designing new tools and equipment has improved the way the waterblasting industry works for over 35 years.</p>
-      <p>This passion for product leadership has brought StoneAge engineering to the forefront of the movement toward hands-free waterblast equipment. New state of the art in-house testing facilities allow the dedicated engineering team to continue to push the boundaries of design. By partnering with industrial cleaning contractors, StoneAge engineers are able to gain unique insight that guides the design of automated systems that increase safety and advance productivity for a wide variety of waterblasting applications. Paired with their unmatched customer service, StoneAge is proud to be leading the way to a safer, more efficient industry.</p>
-      <p>The company has over 150 dealers in 47 countries offering products for industrial, sewer, and coiled tube cleaning as well as custom engineered equipment for application-specific challenges.</p>
-    </div>
-    
-    <aside class="col-sm-3 col-sm-offset-2 padding-tb-30 cta">
-      <a href="waterblast-automation/autobox-abx-2l.html"><img src="assets/img/product/abx-2l-04.jpg" class="img-responsive"></a>
-      <div class="padding-tb-60 padding-left-60">
-        <p class="point"><span>Need help with a job?</span><br/>
-        <a href="#">Contact Our Team of Experts</a></p>
-        <p class="point"><span>Want to work with us?</span><br/>
-        <a href="#">Check our career postings</a></p>
+  <section class="container padding-tb-30">
+    <div class="col-sm-6 product-list">
+      <div class="list-group">
+        <a href="#" class="list-group-item header">Industry Standard</a>
+        <a href="assets/pdf/reference/measurements-conversions.pdf" target="_blank" class="list-group-item">Standard Abbreviations and Measurement Conversions</a>
+        <a href="assets/pdf/reference/pressure-flow-equations.pdf" target="_blank" class="list-group-item">Pressure and Flow Equations</a>
       </div>
-    </aside>
+    </div>
+    <div class="col-sm-6 product-list">
+      <div class="list-group">
+        <a href="#" class="list-group-item header">StoneAge Specific</a>
+        <a href="assets/pdf/reference/swivel-basics.pdf" target="_blank" class="list-group-item">StoneAge Swivel Basics</a>
+        <a href="assets/pdf/reference/thread-size-coding.pdf" target="_blank" class="list-group-item">StoneAge Thread Size Coding</a>
+        <a href="assets/pdf/reference/fitting-torque-guidelines.pdf" target="_blank" class="list-group-item">High Pressure Fitting Assembly Guidelines and Torque Recommendations</a>
+        <a href="assets/pdf/reference/fittings-adapters-guide.pdf" target="_blank" class="list-group-item">Hose Fittings and Adapters Guide</a>
+        <a href="#" class="list-group-item">Bashee Tube Cleaner Hose Reference</a>
+      </div>
+    </div>
   </section>
   
-  <!-- Testimonials -->
-  <div id="wordCarousel" class="carousel slide padding-tb-30" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#wordCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#wordCarousel" data-slide-to="1"></li>
-      <li data-target="#wordCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <div class="testimonial">
-          <p>"In 2015, NCTI allowed Evergreen Industrial Services to oversee our first fully automated hydro-blast turnaround.  Utilizing StoneAge automated equipment, Evergreen achieved the most proficient cleaning to date at an overall reduced cost and a much safer environment for hydro-blasting employees."</p>
-          <p class="attrib">- Brent Peveto, NCTI</p>
-          <img src="assets/img/logo_ncti.gif" alt="NCTI Nippon Chemical Texas">
+  <section class="container safety-callout margin-bottom-30">
+    <a href="safety-information.html"><h2><i class="fa fa-warning"></i> Operating Waterblast Equipment can be potentially dangerous</h2>
+      <p>Please reference important safety information and be aware of proper safety precautions before use.</p></a>
+  </section>
+  
+  
+  <section class="product-extra fluid-container bg-lt-grey">
+    <div class="container">
+      <div class="row padding-tb-30">
+        <div class="col-sm-7">
+          <h2>Quality Waterblasting</h2>
+          <p class="thin">Basic knowledge of water mechanics can help you achieve better results for your customers in multiple applications</p>
         </div>
+        <div class="col-md-4 col-md-offset-1">
+        <table>
+          <tr>
+            <td><a href="assets/pdf/reference/papers/quality-waterblasting.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download White Paper</a></td>
+          </tr>
+        </table>
       </div>
-      <div class="item">
-        <div class="testimonial">
-          <p>"The City of Los Angeles manages one of the largest wastewater collections systems in the country. They benchmarked the new Warthog Magnum against the competition and confirmed that it was the best cleaning tool available."</p>
-          <p class="attrib">- John Pujol, Advanced Infrastructure Technologies</p>
-          <img src="assets/img/logo_ait.png" alt="Advanced Infrastructure Technologies">
-        </div>
-      </div>
-      <div class="item">
-        <div class="testimonial">
-          <p>"StoneAge helped us get our equipment fleet 100% automated."</p>
-          <p class="attrib">- Doug Mcgee, Evergreen Industrial Services</p>
-          <img src="assets/img/logo_evergreen.png" alt="Evergreen Industrial Services">
-        </div>
       </div>
     </div>
-
-    <!-- Controls 
-    <a class="left carousel-control" href="#homeSlides" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#homeSlides" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>-->
-  </div>
-  <!-- End Testimonials -->
+  </section>
   
   <!-- Footer -->
   <footer>
@@ -150,10 +129,10 @@
         </div>
         <ul class="list-unstyled link-list">
           <li><a href="product-catalogs.html">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Technical Reference</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Safety Information</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="technical-reference.html">Technical Reference</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="service-repairs-returns.html">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="safety-information.html">Safety Information</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="custom-waterblast-solutions.html">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
 
