--- a/rotary-waterblast-tools/backout-prevention.html
+++ b/rotary-waterblast-tools/backout-prevention.html
@@ -43,7 +43,7 @@
         <div class="col-sm-8 utils">
           <ul class="list-inline">
             <li><a href="../contact.html">Contact Us</a></li>
-            <li><a href="#">Request a Catalog</a></li>
+            <li><a href="request-catalog.html">Request a Catalog</a></li>
             <li><a href="#">Portal Login</a></li><li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
             <!--<li><a href="#"><i class="search fa fa-search search-button"></i></a></li>-->
           </ul>
@@ -367,7 +367,7 @@
                   <li><a href="../assets/pdf/manuals/BPT-100_Manual_Insert.pdf"><i class="fa fa-file-text-o"></i> &nbsp;BPT-100 User Manual</a></li>
                   <li><a href="../assets/pdf/manuals/ve_400_manual_with_stop.pdf"><i class="fa fa-file-text-o"></i> &nbsp;VE-400 User Manual</a><br><p class="small">Courtesy of Advanced Pressure Systems</p></li>
                 </ul>
-                <p><strong>Our expert staff is available Monday through Friday 8:AM - 5:PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
+                <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
               </div>
             </div>
