--- a/sewer-tools-nozzles/warthog-centralizers.html
+++ b/sewer-tools-nozzles/warthog-centralizers.html
@@ -43,7 +43,7 @@
         <div class="col-sm-8 utils">
           <ul class="list-inline">
             <li><a href="../contact.html">Contact Us</a></li>
-            <li><a href="#">Request a Catalog</a></li>
+            <li><a href="request-catalog.html">Request a Catalog</a></li>
             <li><a href="#">Portal Login</a></li><li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
             <!--<li><a href="#"><i class="search fa fa-search search-button"></i></a></li>-->
           </ul>
@@ -293,7 +293,7 @@
                   <li><a href="http://jetting.stoneagetools.com/tool/sewer-jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
                 </ul>
 -->
-                <p><strong>Our expert staff is available Monday through Friday 8:AM - 5:PM MST</strong> to answer questions and offer advice on your toughest cleaning applications. Ask about configuration options and extensions.</p>
+                <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications. Ask about configuration options and extensions.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
               </div>
             </div>
