--- a/waterblast-automation/inside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/inside-diameter-pipe-cleaner.html
@@ -43,7 +43,7 @@
         <div class="col-sm-8 utils">
           <ul class="list-inline">
             <li><a href="../contact.html">Contact Us</a></li>
-            <li><a href="#">Request a Catalog</a></li>
+            <li><a href="request-catalog.html">Request a Catalog</a></li>
             <li><a href="#">Portal Login</a></li><li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
             <!--<li><a href="#"><i class="search fa fa-search search-button"></i></a></li>-->
           </ul>
@@ -217,10 +217,12 @@ The StoneAge Inside Diameter Pipe Cleaner is an automated rigid lance system des
             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
                 <ul>
+<!--
                   <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;BRLM Data Sheet</a></li>
                   <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;BRLM User Manual</a></li>
+-->
                 </ul>
-                <p><strong>Our expert staff is available Monday through Friday 8:AM - 5:PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
+                <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
               </div>
             </div>
@@ -243,12 +245,24 @@ The StoneAge Inside Diameter Pipe Cleaner is an automated rigid lance system des
     </div>
     <div class="row row-centered">
         <div class="col-sm-2 col-centered">
-          <a href="#"><img class="img-responsive" src="../assets/img/thumb/thumb-positioner-01.jpg" alt="Indexing positioner for heat exchanger tube cleaning">
-          <h5>Lightweight Positioner</h5></a>
+          <a href="../rotary-waterblast-tools/banshee-tube-cleaners.html"><img class="img-responsive" src="../assets/img/product/thumb-banshee-04.jpg" alt="Banshee Beetle tube cleaning tools">
+          <h5>Gopher Rotary Tools</h5></a>
         </div>
         <div class="col-sm-2 col-centered">
-          <a href="#"><img class="img-responsive" src="../assets/img/thumb/thumb-banshee-01.jpg" alt="Banshee rotary tube cleaners">
-          <h5>Banshee Rotary Tools</h5></a>
+          <a href="../rotary-waterblast-tools/badger-2in-pipe-cleaning.html"><img class="img-responsive" src="../assets/img/product/thumb-badger-2in-06.jpg" alt="2-inch Badger Pipe Cleaning Tools">
+          <h5>2" Badger Pipe Cleaning Tools</h5></a>
+        </div>
+        <div class="col-sm-2 col-centered">
+          <a href="../rotary-waterblast-tools/rotary-swivels.html"><img class="img-responsive" src="../assets/img/product/thumb-swivel-sg.jpg" alt="SG Swilvel Models">
+          <h5>SG Swilvel Models</h5></a>
+        </div>
+        <div class="col-sm-2 col-centered">
+          <a href="../waterblast-automation/rigid-lance-machine.html"><img class="img-responsive" src="../assets/img/product/brlm-01.jpg" alt="Rigid Lance Machine">
+          <h5>Rigid Lance Machine</h5></a>
+        </div>
+        <div class="col-sm-2 col-centered">
+          <a href="../waterblast-automation/rigid-lance-machine.html"><img class="img-responsive" src="../assets/img/product/abx-500-02.jpg" alt="AutoBox ABX-500">
+          <h5>AutoBox ABX-500</h5></a>
         </div>
       </div>
     </div>
@@ -266,9 +280,11 @@ The StoneAge Inside Diameter Pipe Cleaner is an automated rigid lance system des
       <div class="col-md-4 col-md-offset-1">
         <table>
           <tr>
-            <td><a href="#" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+            <td><a href="../safety-information.html" target="_blank"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
+<!--
             <td><a href="#"><i class="fa fa-files-o"></i><br>Download Case Study</a></td>
-<!--            <td><a href="#" target="_blank"><i class="fa fa-newspaper-o"></i><br>This Tool in the Press</a></td>-->
+            <td><a href="#" target="_blank"><i class="fa fa-newspaper-o"></i><br>This Tool in the Press</a></td>
+-->
           </tr>
         </table>
       </div>
