--- a/waterblast-automation/outside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/outside-diameter-pipe-cleaner.html
@@ -43,7 +43,7 @@
         <div class="col-sm-8 utils">
           <ul class="list-inline">
             <li><a href="../contact.html">Contact Us</a></li>
-            <li><a href="#">Request a Catalog</a></li>
+            <li><a href="request-catalog.html">Request a Catalog</a></li>
             <li><a href="#">Portal Login</a></li><li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
             <!--<li><a href="#"><i class="search fa fa-search search-button"></i></a></li>-->
           </ul>
@@ -222,10 +222,12 @@ with no wasted time</li>
             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
                 <ul>
+<!--
                   <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;BRLM Data Sheet</a></li>
                   <li><a href="#"><i class="fa fa-file-text-o"></i> &nbsp;BRLM User Manual</a></li>
+-->
                 </ul>
-                <p><strong>Our expert staff is available Monday through Friday 8:AM - 5:PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
+                <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
               </div>
             </div>
@@ -248,12 +250,16 @@ with no wasted time</li>
     </div>
     <div class="row row-centered">
         <div class="col-sm-2 col-centered">
-          <a href="#"><img class="img-responsive" src="../assets/img/thumb/thumb-positioner-01.jpg" alt="Indexing positioner for heat exchanger tube cleaning">
-          <h5>Lightweight Positioner</h5></a>
+          <a href="../rotary-waterblast-tools/barracuda-shotgunning.html"><img class="img-responsive" src="../assets/img/product/thumb-barracuda-01.jpg" alt="Barracuda Rotary Shotgun Tools">
+          <h5>Barracuda Rotary Shotgun Tools</h5></a>
         </div>
         <div class="col-sm-2 col-centered">
-          <a href="#"><img class="img-responsive" src="../assets/img/thumb/thumb-banshee-01.jpg" alt="Banshee rotary tube cleaners">
-          <h5>Banshee Rotary Tools</h5></a>
+          <a href="../rotary-waterblast-tools/spitfire-shotgunning.html"><img class="img-responsive" src="../assets/img/product/thumb-spitfire-01.jpg" alt="Spitfire Rotary Shotgun Tools">
+          <h5>Spitfire Rotary Shotgun Tools</h5></a>
+        </div>
+        <div class="col-sm-2 col-centered">
+          <a href="powered-rotation-units.html"><img class="img-responsive" src="../assets/img/product/thumb-sg-e60-01.jpg" alt="Spitfire Rotary Shotgun Tools">
+          <h5>Powered Rotation Units</h5></a>
         </div>
       </div>
     </div>
@@ -271,9 +277,12 @@ with no wasted time</li>
       <div class="col-md-4 col-md-offset-1">
         <table>
           <tr>
+<!--
             <td><a href="#" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
             <td><a href="#"><i class="fa fa-files-o"></i><br>Download Case Study</a></td>
-<!--            <td><a href="#" target="_blank"><i class="fa fa-newspaper-o"></i><br>This Tool in the Press</a></td>-->
+            <td><a href="#" target="_blank"><i class="fa fa-newspaper-o"></i><br>This Tool in the Press</a></td>
+-->
+            <td><a href="../safety-information.html" target="_blank"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
           </tr>
         </table>
       </div>
