--- a/contact.html
+++ b/contact.html
@@ -151,24 +151,25 @@
             </div>
           </div><!-- Ordering Tab Content -->
           <div role="tabpanel" class="tab-pane" id="ordering-tab">
-            <div class="row">
+            <div class="row margin-bottom-120">
               <div class="col-sm-3 contact-method">
-                <h3 class="bold">US &amp; Canada Waterblast Sales</h3>
-                <p><a href="#contact-tab" data-toggle="tab">Contact us</a> directly to purchase in the US or Canada.</p>
+                <h3 class="bold">US &amp; Canada Waterblast Orders</h3>
+                <p><a href="#contact-tab" data-toggle="tab">Contact StoneAge directly</a> to purchase in the US or Canada.</p>
               </div>
               <div class="col-sm-3 contact-method">
-                <h3 class="bold">International Waterblast Sales</h3>
+                <h3 class="bold">International Waterblast Orders</h3>
                 <p><a href="#intl-tab" data-target="#intl-tab" data-toggle="tab">Contact a dealer in your region</a> to purchase internationally.</p>
               </div>
               <div class="col-sm-3 contact-method">
-                <h3 class="bold">Sewer Tools Sales</h3>
+                <h3 class="bold">Sewer Tools Orders</h3>
                 <p><a href="#sewer-tab" data-toggle="tab">Contact a dealer in your region</a> to purchase.</p>
               </div>
               <div class="col-sm-3 contact-method">
-                <h3>Downhole Tools Sales</h3>
+                <h3>Downhole Tools Orders</h3>
                 <p><a href="#downhole-tab" data-toggle="tab">Contact a dealer in your region</a> to purchase.</p>
               </div>
             </div>
+<!--
             <div class="row">
               <h3>When sending a Purchase Order (PO), please be sure to include:</h3>
               <ol>
@@ -191,11 +192,12 @@
               <h3>Verify your order</h3>
               <p>Your StoneAge Account Representative will always send an order confirmation. Please check the confirmation and <a data-tab-destination="contact-tab">notify our Customer Service Team</a> if you notice any mistakes or have any questions/concerns.</p>
             </div>
+-->
           </div>
           <!-- International Tab Content -->
           <div role="tabpanel" class="tab-pane" id="intl-tab">
             <div class="row">
-              <p>Select your region to view a list of <span class="bold">international waterblast dealers</span>. For purchases in the US and Canada, <a href="#contact-tab" data-toggle="tab">contact us directly.</a></p>
+              <p>Select your region below to view a list of <span class="bold">international waterblast dealers</span>. For purchases in the US and Canada, <a href="#contact-tab" data-toggle="tab">contact us directly.</a></p>
               <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                 <div class="panel panel-default dealer-list">
                   <div class="panel-heading" role="tab" id="heading-wb-africa">
@@ -1223,7 +1225,7 @@ Finland</a></li>
           <!-- Sewer Tab Content -->
           <div role="tabpanel" class="tab-pane" id="sewer-tab">
             <div class="row">
-              <p>Select your region to view a list of <span class="bold">sewer tools dealers</span>.</p>
+              <p>Select your region below to view a list of <span class="bold">sewer tools dealers</span>.</p>
               <div class="panel-group" id="accordion2" role="tablist" aria-multiselectable="true">
                 <div class="panel panel-default dealer-list">
                   <div class="panel-heading" role="tab" id="sw-us-heading">
@@ -2330,7 +2332,7 @@ Finland</a></li>
           <!-- Downhole Tab Content -->
           <div role="tabpanel" class="tab-pane" id="downhole-tab">
             <div class="row">
-              <p>Select your region to view a list of <span class="bold">downhole tools dealers</span>.</p>
+              <p>Select your region below to view a list of <span class="bold">downhole tools dealers</span>.</p>
               <div class="panel-group" id="accordion3" role="tablist" aria-multiselectable="true">
                 <div class="panel panel-default dealer-list">
                   <div class="panel-heading" role="tab" id="dh-us-heading">
@@ -2520,29 +2522,20 @@ Finland</a></li>
           <!-- Repairs/Returns Tab Content -->
           <div role="tabpanel" class="tab-pane" id="support-tab">
             <div class="row">
-              <div class="section-heading">
-                <h2 class="bold slab">Repairs</h2>
+              <div class="col-sm-6 padding-right-30">
+                <h2 class="section-heading">Repairs</h2>
+                <p>Repair &amp; Maintenance Service is available by the same technicians who build and test our tools. We try to complete repairs and test every tool within three days of receipt. You must call StoneAge for an RMA number prior to sending your tool in for repair. Send tool to:</p>
+                <p class="bold">StoneAge Inc.<br>
+                Attention Repairs<br>
+                466 S. Skylane Dr.<br>
+                  Durango CO 81303, USA</p>
+                <p>Serial Number Database is maintained on all equipment sold. If a serial number is provided when ordering parts, we can verify that the right parts are specified.</p>
               </div>
-              <h3>When sending equipment in for repair, please be sure to:</h3>
-              <ol>
-                <li>Obtain a Return Material Authorization (RMA) from your Account Representative</li>
-                <li>Provide Part ID(s) — if sending a package, please include all part numbers. (i.e. BN18-H6L, BN18 442-D)</li>
-                <li>Provide Serial Number(s)</li>
-                <li>Provide the pressure and flow the tool is operating</li>
-                <li>Describe the problem in detail</li>
-              </ol>
-              <p>The tool will be evaluated by a repair technician upon arrival and you will be contacted by StoneAge with a repair estimate. A PO is required to proceed with the repair.</p>
-              <div class="section-heading">
-                <h2 class="bold slab">Returns</h2>
-              </div>
-              <h3>When sending a tool back for a return, please be sure to:</h3>
-              <ol>
-                <li>Obtain a RMA from your Account Representative</li>
-                <li>Provide Part ID(s)</li>
-                <li>Provide Serial Number(s)</li>
-                <li>Describe the reason for return (i.e. Demo tool, wrong part ordered, wrong part sent, return for credit, etc.)</li>
-              </ol>
-              <p>When the tool arrives it will be evaluated for condition. Your Account Representative will communicate with you regarding the return.<br/><em>Returns are subject to a 15% restock fee.</em></p>
+              
+              <div class="col-sm-6 padding-left-30">
+                <h2 class="section-heading">Returns</h2>
+                <p>Any parts returned for credit or warranty must be accompanied by a StoneAge RMA number. Please contact a Customer Service Specialist or Authorized Dealer to obtain an RMA number. A minimum restocking fee of 15% applies to standard items returned unused. Returns will only be accepted on unused items returned 6 months or less from invoice date. All returns and restocking fees are subject to StoneAge final decision. Returns of custom products and obsolete items are not accepted.</p>
+                <p><a href="service-repairs-returns.html">See Service &amp; Repairs for more service information.</a></p>
             </div>
           </div>
         </div>
@@ -2607,7 +2600,7 @@ Finland</a></li>
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="stoneage-trademark-list.html">Trademarks</a> | <a href="terms.html">Terms</a>
+        <p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="trademark-list.html">Trademarks</a> | <a href="terms.html">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
