--- a/service-repairs-returns.html
+++ b/service-repairs-returns.html
@@ -76,41 +76,61 @@
   </div>
   
   <section class="results container padding-tb-30">
-    <div class="row">
-      <div class="col-sm-7">
-        <h2 class="section-heading">Repairs</h2>
-        <p>When sending equipment in for repair, please be sure to:</p>
-        <ol>
-          <li>Obtain a Return Material Authorization (RMA) from your Account Representative</li>
-          <li>Provide Part ID(s) — if sending a package, please include all part numbers. (i.e. BN18-H6L, BN18 442-D)</li>
-          <li>Provide Serial Number(s)</li>
-          <li>Provide the pressure and flow the tool is operating</li>
-          <li>Describe the problem in detail</li>
-        </ol>
-        <p>The tool will be evaluated by a repair technician upon arrival and you will be contacted by StoneAge with a repair estimate. A PO is required to proceed with the repair.</p>
-        <h2 class="section-heading">Returns</h2>
-        <p>When sending a tool back for a return, please be sure to:</p>
-        <ol>
-          <li>Obtain a RMA from your Account Representative</li>
-          <li>Provide Part ID(s)</li>
-          <li>Provide Serial Number(s)</li>
-          <li>Describe the reason for return (i.e. Demo tool, wrong part ordered, wrong part sent, return for credit, etc.)</li>
-        </ol>
-        <p>When the tool arrives it will be evaluated for condition. Your Account Representative will communicate with you regarding the return.<br/><em>Returns are subject to a 15% restock fee.</em></p>
-      </div>
-      
-      <aside class="col-sm-3 col-sm-offset-2 right-sidebar">
-        <h3>Product Support</h3>
-        <ul class="list-unstyled">
-          <li><a href="product-catalogs.html">Product Catalogs</a></li>
-          <li><a href="technical-reference.html">Technical Reference</a></li>
-          <li><a href="service-repairs-returns.html">Service &amp; Repairs</a></li>
-          <li><a href="safety-information.html">Safety Information</a></li>
-          <li><a href="custom-waterblast-solutions.html">Custom Solutions</a></li>
-        </ul>
-      </aside>
-      
+    <div class="col-sm-7">
+      <h2 class="section-heading">Technical Support</h2>
+      <p>For Technical Support, please contact StoneAge. Operator's manuals and repair videos are available on this website. They illustrate tools, identify parts, and detail maintenance and overhaul procedures.</p>
+
+      <h2 class="section-heading">Repairs</h2>
+      <p>Repair &amp; Maintenance Service is available by the same technicians who build and test our tools. We try to complete repairs and test every tool within three days of receipt. You must call StoneAge for an RMA number prior to sending your tool in for repair. Send tool to:</p>
+      <p class="bold">StoneAge Inc.<br>
+      Attention Repairs<br>
+      466 S. Skylane Dr.<br>
+        Durango CO 81303, USA</p>
+      <p>Serial Number Database is maintained on all equipment sold. If a serial number is provided when ordering parts, we can verify that the right parts are specified.</p>
+
+      <h2 class="section-heading">Lead Time</h2>
+      <p>Call or email your order to StoneAge or an authorized dealer with purchase order number, shipping and billing addresses, and delivery date. Check datasheet to ensure specifications are complete. Advise whether we should hold shipment until all items are available.</p>
+
+      <h2 class="section-heading">Ordering</h2>
+      <p>Shipping is pre-paid and invoiced with order but may be charged directly to the customer’s account with selected courier by special instruction. Most orders are shipped via UPS or Fed Ex couriers; specify a preference if you wish. Larger equipment will be shipped by truck or air freight. Either party may make the arrangements. Airline counter-to-counter delivery is not reliable from our mountain location.</p>
+
+      <h2 class="section-heading">Shipping</h2>
+      <p>Shipping is pre-paid and invoiced with order but may be charged directly to the customer’s account with selected courier by special instruction. Most orders are shipped via UPS or Fed Ex couriers; specify a preference if you wish. Larger equipment will be shipped by truck or air freight. Either party may make the arrangements. Airline counter-to-counter delivery is not reliable from our mountain location.</p>
+
+      <h2 class="section-heading">Payment</h2>
+      <p>Major credit cards or bank transfers are accepted. Pre-payment is required to ship custom equipment.</p>
+
+      <h2 class="section-heading">Returns</h2>
+      <p>Any parts returned for credit or warranty must be accompanied by a StoneAge RMA number. Please contact a Customer Service Specialist or Authorized Dealer to obtain an RMA number. A minimum restocking fee of 15% applies to standard items returned unused. Returns will only be accepted on unused items returned 6 months or less from invoice date. All returns and restocking fees are subject to StoneAge final decision. Returns of custom products and obsolete items are not accepted.</p>
     </div>
+
+    <aside class="col-sm-4 col-sm-offset-1 right-sidebar">
+      <div class="row grey">
+        <h3>Service Contacts</h3>
+        <table class="table table-responsive">
+          <tr>
+            <td>Toll Free in the USA</td>
+            <td>&nbsp;&nbsp;1 (866) 795-1586</td>
+          </tr>
+          <tr>
+            <td>Outside the USA</td>
+            <td>+1 (970) 259-2869</td>
+          </tr>
+          <tr>
+            <td>FAX</td>
+            <td>+1 (970) 259-2868</td>
+          </tr>
+          <tr>
+            <td>Email</td>
+            <td><a href="mailto:sales@stoneagetools.com">sales@stoneagetools.com</a></td>
+          </tr>
+          <tr>
+            <td>Hours</td>
+            <td>Monday - Friday<br>8:00 AM - 5:00 PM<br>(USA Mountain Time)</td>
+          </tr>
+        </table>
+      </div>
+    </aside>
   </section>
   
   
@@ -174,7 +194,7 @@
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="stoneage-trademark-list.html">Trademarks</a> | <a href="terms.html">Terms</a>
+        <p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="trademark-list.html">Trademarks</a> | <a href="terms.html">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
