--- a/waterblast-automation/gearhead-tote-cleaner.html
+++ b/waterblast-automation/gearhead-tote-cleaner.html
@@ -345,7 +345,7 @@ The StoneAge Gearhead Tote Cleaner is ideal for cleaning the inner walls of pain
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="../stoneage-trademark-list.html">Trademarks</a> | <a href="../terms.html">Terms</a>
+        <p>2015 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="../trademark-list.html">Trademarks</a> | <a href="../terms.html">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
