--- a/rotary-waterblast-tools/gopher-tube-cleaning.html
+++ b/rotary-waterblast-tools/gopher-tube-cleaning.html
@@ -510,7 +510,7 @@
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="../stoneage-trademark-list.html">Trademarks</a> | <a href="../terms.html">Terms</a>
+        <p>2015 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="../trademark-list.html">Trademarks</a> | <a href="../terms.html">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
