--- a/waterblast-automation/inside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/inside-diameter-pipe-cleaner.html
@@ -399,7 +399,7 @@ The StoneAge Inside Diameter Pipe Cleaner is an automated rigid lance system des
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="../stoneage-trademark-list.html">Trademarks</a> | <a href="../terms.html">Terms</a>
+        <p>2015 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="../trademark-list.html">Trademarks</a> | <a href="../terms.html">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
