--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -73,14 +73,15 @@
   <div class="row landing-nav">
     <div class="container">
       <div class="col-sm-6 landing-nav-btn automated">
-        <a href="#"><i class="fa fa-automobile"></i>
+        <a href="#">
+<!--          <i class="fa fa-automobile"></i>-->
           <h2>Automated</h2>
           <h5>Waterblast equipment and systems</h5>
         </a>
       </div>
       <div class="col-sm-6 landing-nav-btn rotary">
         <a href="#rotary">
-          <i class="fa fa-bicycle"></i>
+<!--          <i class="fa fa-bicycle"></i>-->
           <h2>Rotary</h2>
           <h5>Waterblast tools and accessories</h5>
         </a>
@@ -317,7 +318,7 @@
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="stoneage-trademark-list.html">Trademarks</a> | <a href="terms.html">Terms</a>
+        <p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="trademark-list.html">Trademarks</a> | <a href="terms.html">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
