--- a/rotary-waterblast-tools/bjv-pipe-cleaning.html
+++ b/rotary-waterblast-tools/bjv-pipe-cleaning.html
@@ -672,6 +672,10 @@
         <h5>AutoBox ABX-500</h5></a>
       </div>
       <div class="col-sm-2 col-centered">
+        <a href="raptor-pipe-cleaning.html"><img class="img-responsive" src="../assets/img/product/thumb-rpt-02.jpg" alt="Raptor Pipe Cleaning Tools">
+        <h5>Raptor Pipe Cleaning</h5></a>
+      </div>
+      <div class="col-sm-2 col-centered">
         <a href="backout-prevention.html"><img class="img-responsive" src="../assets/img/thumb/thumb-backout-preventers.jpg" alt="High pressure pipe cleaning backout preventers">
         <h5>Backout Prevention</h5></a>
       </div>
