--- a/rotary-waterblast-tools/raptor-pipe-cleaning.html
+++ b/rotary-waterblast-tools/raptor-pipe-cleaning.html
@@ -396,6 +396,10 @@ through the pipe</li>
         <a href="backout-prevention.html"><img class="img-responsive" src="../assets/img/thumb/thumb-backout-preventers.jpg" alt="High pressure pipe cleaning backout preventers">
         <h5>Backout Prevention</h5></a>
       </div>
+      <div class="col-sm-2 col-centered">
+        <a href="bjv-pipe-cleaning.html"><img class="img-responsive" src="../assets/img/product/thumb-bjv-03.jpg" alt="Indexing positioner for heat exchanger tube cleaning">
+        <h5>BJV Pipe Cleaning Tools</h5></a>
+      </div>
     </div>
   </section>
   <!-- End Related Items -->
