--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -1020,8 +1020,16 @@
         <h5>AutoBox ABX-2L Flex Lancing System</h5></a>
       </div>
       <div class="col-sm-2 col-centered">
-        <a href="../waterblast-automation/rigid-lance-machine.html"><img class="img-responsive" src="../assets/img/product/thumb-brlm-01.jpg" alt="Rigid Lance Machine for heat exchanger tube cleaning">
-        <h5>Rigid Lance Machine</h5></a>
+        <a href="../waterblast-automation/boiler-tube-cleaner.html"><img class="img-responsive" src="../assets/img/product/thumb-btc-01.jpg" alt="Boiler Tube Cleaner">
+        <h5>Boiler Tube Cleaner</h5></a>
+      </div>
+      <div class="col-sm-2 col-centered">
+        <a href="gopher-tube-cleaning.html"><img class="img-responsive" src="../assets/img/product/thumb-gopher-01.jpg" alt="Gopher Tube Cleaning Tools">
+        <h5>Gopher Tube Cleaning Tools</h5></a>
+      </div>
+      <div class="col-sm-2 col-centered">
+        <a href="backout-prevention.html"><img class="img-responsive" src="../assets/img/thumb/thumb-backout-preventers.jpg" alt="High pressure pipe cleaning backout preventers">
+        <h5>Backout Prevention</h5></a>
       </div>
     </div>
   </section>
